# django_dev_blog

./: .env.docker  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  project-procedure.md  pyproject.toml
app/: settings.py
config/: settings.py  urls.py
core/: settings.py
django_dev_blog/: asgi.py  settings.py  urls.py  wsgi.py
