[tool.poetry]
name = "django-dev-blog"
version = "0.1.0"
description = ""
authors = ["Kasun Lakshitha <kasun2014@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
psycopg = "^3.2.3"


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
